Fix the overlapping of cktoolbar

--- a/profiles/xeditor/modules/xeditor_core/css/xeditor.css
+++ b/profiles/xeditor/modules/xeditor_core/css/xeditor.css
@@ -39,3 +39,9 @@
   height: 38px;
   width: 38px;
 }
+
+/* Ckeditor styling override */
+#overlay div.sortableList div.sortableListDiv,
+#overlay div.sortableList div.sortableListDiv span.sortableListSpan ul {
+  width: 784px;
+}
